# scl-meta

./: README.md
doc/ru/: IsMethodExists.md  IsOperatorExists.md
include/ScL/: Meta.h
include/ScL/Meta/: Counter.h  String.h  Trait.h  Type.h
include/ScL/Meta/Trait/: Detection.h  DoesFunctionExist.h  DoesMethodExist.h  DoesOperatorExist.h  IsDetected.h  IsFunctionExists.h  IsMethodExists.h  IsOperatorExists.h
include/ScL/Meta/Trait/Detection/: Function.h  Method.h  Operator.h
include/ScL/Meta/Type/: Identity.h  Inheritance.h  Sequence.h
project/cmake/: CMakeLists.txt
project/cmake/test/: CMakeLists.txt
project/cmake/test/Detection/: CMakeLists.txt
project/qmake/: scl-meta.prf
project/qmake/test/: scl-meta.pro
project/qmake/test/Detection/: Detection.pro
src/: Counter.h
src/Trait/: IsDetected.h
src/Trait/Detection/: Function.h  Method.h  Operator.h
src/Type/: Sequence.h
src/trait/: DoesFunctionExist.h  DoesMethodExist.h  DoesOperatorExist.h  IsDetected.h  IsFunctionExists.h  IsMethodExists.h  IsOperatorExists.h
src/trait/Detection/: Function.h  Method.h  Operator.h
src/type/: Identity.h  Inheritance.h  Sequence.h
test/Detection/: main.cpp
